--- a/styles/_responsive-about.scss
+++ b/styles/_responsive-about.scss
@@ -2,15 +2,21 @@
   #about-first {
     h2 {
       text-align: center;
+      font-size: 20px;
     }
+
     p {
+      font-size: 16px;
       width: 100%;
     }
+
     .bg-orange-img {
       margin-top: 100px;
+
       img {
         width: 100%;
       }
+
       &::before,
       &::after {
         content: "";
@@ -22,31 +28,41 @@
         position: absolute;
         z-index: 1;
       }
+
       &::before {
         top: -20%;
         left: -2%;
       }
+
       &::after {
         bottom: -20%;
         right: 0%;
       }
     }
   }
+
   #about-founder {
     h2 {
       text-align: center;
+      font-size: 20px;
     }
+
     h3 {
       text-align: center;
+      font-size: 17px;
     }
+
     p {
       width: 100%;
+      font-size: 16px;
     }
   }
+
   #about-employees {
-    .section-title{
-        font-size: 35px;
+    .section-title {
+      font-size: 25px;
     }
+
     .img-box {
       img {
         height: 150px;
@@ -57,17 +73,21 @@
 
 @media (min-width: 768px) and (max-width: 1200px) {
   #about-first {
+
     h2 {
-      text-align: center;
+      font-size: 33px;
     }
     p {
       width: 100%;
     }
+
     .bg-orange-img {
       margin-top: 100px;
+
       img {
         width: 100%;
       }
+
       &::before,
       &::after {
         content: "";
@@ -79,32 +99,135 @@
         position: absolute;
         z-index: 1;
       }
+
       &::before {
         top: -20%;
         left: -2%;
       }
+
       &::after {
         bottom: -20%;
         right: 0%;
       }
     }
   }
+
   #about-founder {
     h2 {
       text-align: center;
+      font-size: 33px;
     }
+
     h3 {
       text-align: center;
     }
+
     p {
+      font-size: 18px;
       width: 100%;
     }
   }
+
   #about-employees {
     .img-box {
       img {
         height: 250px;
       }
+    }
+  }
+}
+
+@media(min-width:540px) {
+  .initial {
+    height: 30vh;
+  }
+}
+
+@media(min-width:768px) {
+  .initial {
+    height: 40vh;
+
+    .overlay {
+      h1 {
+        font-size: 40px;
+      }
+    }
+  }
+}
+
+@media(min-width:992px) {
+  .initial {
+    .overlay {
+      h1 {
+        font-size: 50px;
+      }
+    }
+  }
+  #about-first{
+    width: 95%;
+    margin: auto;
+  }
+  #about-founder {
+    width: 95%;
+    margin: auto;
+    h2 {
+      text-align: start;
+    }
+
+    h3 {
+      text-align: start;
+    }
+
+    p {
+      width: 100%;
+    }
+  }
+}
+
+@media(min-width:1200px) {
+  .initial {
+    height: 50vh;
+
+    .overlay {
+      h1 {
+        font-size: 60px;
+      }
+    }
+  }
+}
+
+@media(max-width:991px) {
+  #about-first {
+    padding: 50px 0;
+
+    h2 {
+      text-align: center;
+    }
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1200px) {
+  #about-first {
+    padding: 0;
+    h2{
+      padding-top: 100px;
+    }
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {
+  #about-first {
+    h2 {
+      font-size: 33px;
+    }
+  }
+
+  #about-founder {
+    h2 {
+      font-size: 33px;
+    }
+    p{
+      font-size: 18px;
     }
   }
 }
